feat: add certificate type filter to query and type options API